Dark Mode - bug fixes

--- a/themes/material/form-select/materialselect.css
+++ b/themes/material/form-select/materialselect.css
@@ -62,6 +62,7 @@
 }
 
 .aurora-select-select {
+    color: var(--md-sys-color-on-surface);
     font-family: Roboto, sans-serif;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
@@ -84,6 +85,7 @@
     -moz-appearance: none;
     appearance: none;
 }
+
 
 .aurora-select-container:not(.disabled) .aurora-select .aurora-select-select:hover {
     border-bottom-color: rgba(0,0,0,.87);
@@ -124,7 +126,8 @@
 
 .aurora-select-container:not(.disabled) .aurora-select .aurora-leading-icon  ,
 .aurora-select-container:not(.disabled)  .aurora-select .aurora-trailing-icon  {
-    color: rgba(0,0,0,.54);
+    color: var(--md-sys-color-on-surface);
+
 }
 
 .with-leading-icon .aurora-select  .aurora-leading-icon {
